--- a/src/pages/ViewTickets.css
+++ b/src/pages/ViewTickets.css
@@ -1,6 +1,6 @@
 .ticket-wrapper {
   width: 100vw;
-  height: 100vh;               /* THIS was missing */
+  height: 100vh;               
   display: flex;
   justify-content: center;
   align-items: center;
